# PT-Tree

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
src/: data_structure.h  gen.cpp  gen.h  main.cpp  methods.cpp  methods.h  pt_tree.cpp  pt_tree.h  read.cpp  read.h
